--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+ "dependencies": {
+  "@testing-library/dom": "^10.4.1",
+  "@testing-library/jest-dom": "^6.6.4",
+  "@testing-library/react": "^16.3.0",
+  "@testing-library/user-event": "^13.5.0",
+  "lucide-react": "^0.537.0",
+  "react": "^19.1.1",
+  "react-dom": "^19.1.1",
+  "react-router-dom": "^7.7.1",
+  "react-scripts": "5.0.1",
+  "web-vitals": "^2.1.4"
+},
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
